[project]
name = "rrs_industrial_scenario"
version = "1.0.0"
authors = [
  { name="Cleverson Nahum", email="cleversonahum@gmail.com" },
]
description = "Radio resource scheduling for an industrial scenario."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lasseufpa/rrs_industrial_scenario"
"Bug Tracker" = "https://github.com/lasseufpa/rrs_industrial_scenario/issues"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
include = ["./"]
useLibraryCodeForTypes = true